@@ -1,3 +1,4 @@
+1.1.7-0 @08/24/2005 21:00:00 UTC@
 1.1.6-0 @08/22/2005 16:25:00 UTC@
 1.1.5-0 @08/18/2005 19:45:00 UTC@
 1.1.4-0 @07/11/2005 14:20:00 UTC@
