@@ -230,7 +230,7 @@ void GUID::generate(const GUID& nsGuid, const std::string& name)
 #endif
 }
 
-void GUID::writeObject(vpr::ObjectWriter* writer)
+void GUID::writeObject(vpr::ObjectWriter* writer) throw (IOException)
 {
    writer->writeUint32(mGuid.standard.m0);
    writer->writeUint16(mGuid.standard.m1);
@@ -245,7 +245,7 @@ void GUID::writeObject(vpr::ObjectWriter* writer)
    writer->writeUint8(mGuid.standard.m5[5]);
 }
 
-void GUID::readObject(vpr::ObjectReader* reader)
+void GUID::readObject(vpr::ObjectReader* reader) throw (IOException)
 {
    mGuid.standard.m0 = reader->readUint32();
    mGuid.standard.m1 = reader->readUint16();
